# myBuild

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.rsp  build.sh  main.c  myBuild.json
.clangd/index/: arena.h.B62B17A093D58179.idx  container.h.A67C40FA251FB59A.idx  cstring.h.422E4DD550A54C1A.idx  main.c.06FE9E4D09339F8C.idx  mybuild.h.28BC24D609F3DE04.idx  yyjson.h.9208D00E6FF85483.idx
include/: mybuild.h
src/: cli.c  config_handler.c  file_handler.c  main.c  package_manager.c  project_handler.c  utils.c
